@startuml
'https://plantuml.com/class-diagram
left to right direction
skinparam dpi 150
skinparam defaultTextAlignment center
skinparam wrapWidth 150

package "敌机工厂（EnemyFactory）" {
    interface EnemyFactory {
        + createAircraft(x, y, speedX, speedY, hp): AbstractEnemyAircraft
    }

    abstract class AbstractEnemyAircraft {
        + forward(): void
    }

    class EnemyFactoryManager {
        + getFactory(enemyType): EnemyFactory
        + createEnemy(enemyType, x, y, speedX, speedY, hp): AbstractEnemyAircraft
    }

    class MobEnemyFactory {
        + createAircraft(x, y, speedX, speedY, hp): AbstractEnemyAircraft
    }

    class EliteEnemyFactory {
        + createAircraft(x, y, speedX, speedY, hp): AbstractEnemyAircraft
    }

    class ElitePlusEnemyFactory {
        + createAircraft(x, y, speedX, speedY, hp): AbstractEnemyAircraft
    }

    class AceEnemyFactory {
        + createAircraft(x, y, speedX, speedY, hp): AbstractEnemyAircraft
    }

    class BossEnemyFactory {
        + createAircraft(x, y, speedX, speedY, hp): AbstractEnemyAircraft
    }

    class MobEnemy {
        + forward(): void
        + shoot(): List<BaseBullet>
    }

    class EliteEnemy {
        + forward(): void
        + shoot(): List<BaseBullet>
        + createProp(): AbstractProp
    }

    class ElitePlusEnemy {
        + forward(): void
        + shoot(): List<BaseBullet>
    }

    class AceEnemy {
        + forward(): void
        + shoot(): List<BaseBullet>
    }

    class BossEnemy {
        + forward(): void
        + shoot(): List<BaseBullet>
    }

    EnemyFactory <|-- MobEnemyFactory
    EnemyFactory <|-- EliteEnemyFactory
    EnemyFactory <|-- ElitePlusEnemyFactory
    EnemyFactory <|-- AceEnemyFactory
    EnemyFactory <|-- BossEnemyFactory

    EnemyFactoryManager --> EnemyFactory : uses
    EnemyFactoryManager --> AbstractEnemyAircraft : creates
    EnemyFactoryManager --> MobEnemyFactory : creates
    EnemyFactoryManager --> EliteEnemyFactory : creates
    EnemyFactoryManager --> ElitePlusEnemyFactory : creates
    EnemyFactoryManager --> AceEnemyFactory : creates
    EnemyFactoryManager --> BossEnemyFactory : creates

    EnemyFactory --> AbstractEnemyAircraft : returns
    MobEnemyFactory --> MobEnemy : creates
    EliteEnemyFactory --> EliteEnemy : creates
    ElitePlusEnemyFactory --> ElitePlusEnemy : creates
    AceEnemyFactory --> AceEnemy : creates
    BossEnemyFactory --> BossEnemy : creates

    AbstractEnemyAircraft <|-- MobEnemy
    AbstractEnemyAircraft <|-- EliteEnemy
    AbstractEnemyAircraft <|-- ElitePlusEnemy
    AbstractEnemyAircraft <|-- AceEnemy
    AbstractEnemyAircraft <|-- BossEnemy
}

title 飞机大战 - 工厂方法模式（敌机创建）

@enduml
